No `toList()` for old `Stream`